feature: endpoint banks
